# template-python

./: .copilot-instructions.md  .gitattributes  .gitignore  README.md  pyproject.toml  setup.sh
.github/: CODEOWNERS
.github/workflows/: pr-validate.yml  quality.yml  sync-copilot-instructions.yml  validate-on-demand.yml
tests/: test_placeholder.py
