[project]
name = "template-project"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
